fix: Avatar custom marker getting clipped (#139)
closes #138

--- a/packages/core/src/timeline/timeline.css
+++ b/packages/core/src/timeline/timeline.css
@@ -41,7 +41,6 @@
 
 .f-timeline-item__marker > * {
     z-index: 1;
-    display: block;
     margin-right: auto;
     margin-left: auto;
 }
